# context-windows-lab

./: .coverage  .env.example  .flake8  .gitignore  CHANGELOG.md  CLEAN_CODE_GUIDELINES.md  COMPLIANCE_VERIFICATION.md  COMPREHENSIVE_FINAL_EVALUATION.md  COST_ANALYSIS.md  CRITERIA_CHECKLIST.md  EXPERIMENT_TEMPLATE.md  FILE_LENGTH_JUSTIFICATION.md  FINAL_EVALUATION.md  FINAL_SUMMARY.md  GRADE_SUMMARY.md  GUIDELINES_COMPLIANCE.md  HOW_TO_RUN.md  PROJECT_SUMMARY.md  README.md  SELF_ASSESSMENT_METHOD.md  diagnostic_test.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.claude/agents/: academic-project-grader.md
data/hebrew_corpus/: hebrew_corpus.json
data/synthetic/context_size/: context_size_10.json  context_size_2.json  context_size_20.json  context_size_5.json  context_size_50.json
data/synthetic/needle_haystack/: dataset.json
docs/: API.md  ARCHITECTURE.md  PRD.md  PROMPTS.md  RESULTS.md  RPD.md
docs/architecture/decisions/: ADR-001-local-llm-inference.md  ADR-002-synthetic-data-generation.md  ADR-003-configuration-driven-design.md
notebooks/: analysis_all_experiments.ipynb  analysis_exp1_needle_haystack.ipynb  analysis_exp2_context_size.ipynb  analysis_exp3_rag_impact.ipynb  analysis_exp4_strategies.ipynb
results/exp1/: results.json
results/exp2/: results.json
results/exp3/: results.json  sensitivity_analysis.json
results/exp4/: results.json
scripts/: run_all_experiments.sh  setup_environment.sh
src/: config.py  data_generator.py  evaluator.py  llm_interface.py  plot_sensitivity.py  sensitivity_analysis.py
src/experiments/: exp1_needle_haystack.py  exp2_context_size.py  exp3_rag_impact.py  exp4_strategies.py
src/utils/: metrics.py  visualization.py
tests/: __init__.py  conftest.py  test_config.py  test_data_generator.py  test_evaluator.py  test_experiments.py  test_llm_interface.py  test_metrics.py  test_visualization_output.py
