[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-windows-lab"
version = "1.0.0"
description = "Research lab investigating context window characteristics and management strategies for Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "All Rights Reserved - Dr. Yoram Segal"}
authors = [
    {name = "Tal Barda", email = "tal.barda@example.com"}
]
keywords = ["llm", "context-windows", "rag", "ollama", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "ollama>=0.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/TalBarda8/context-windows-lab"
Repository = "https://github.com/TalBarda8/context-windows-lab.git"
Documentation = "https://github.com/TalBarda8/context-windows-lab/blob/main/README.md"

[tool.setuptools]
packages = ["src", "src.experiments", "src.utils"]

[tool.setuptools.package-data]
src = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
